--- a/DockerFile
+++ b/DockerFile
@@ -9,4 +9,4 @@ USER root
 RUN mkdir /simple_java_app
 COPY / .
 RUN mvn install -DskipTests
-ENTRYPOINT ["java", "-jar", "target/simple_java_app.jar"]
+ENTRYPOINT ["java", "-jar", "target/simpleJavaApp-0.0.1-SNAPSHOT.jar"]
